--- a/msvc/libmonoruntime.targets
+++ b/msvc/libmonoruntime.targets
@@ -1,201 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <ItemGroup>
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\appdomain.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\assembly.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\attach.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\boehm-gc.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\class-accessors.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\class.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\cominterop.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\console-win32.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\property-bag.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\w32socket-win32.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\w32file-win32.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\w32error-win32.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\icall-windows.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\marshal-windows.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\mono-security-windows.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\w32mutex-win32.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\w32semaphore-win32.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\w32event-win32.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\w32process.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\w32process-win32.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\coree.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\custom-attrs.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\debug-helpers.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\debug-mono-ppdb.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\debug-mono-symfile.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\decimal-ms.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\dynamic-image.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\dynamic-stream.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\domain.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\environment.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\exception.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\w32file.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\file-mmap-windows.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\filewatcher.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\gc-stats.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\gc.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\handle.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\icall.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\image.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\jit-info.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\loader.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\locales.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\lock-tracer.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\marshal.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\mempool.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\metadata-verify.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\metadata.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\metadata-cross-helpers.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\method-builder.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\monitor.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\mono-basic-block.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\mono-config.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\mono-config-dirs.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\mono-debug.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\mono-endian.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\mono-hash.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\mono-conc-hash.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\mono-mlist.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\mono-perfcounters.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\null-gc.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\number-ms.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\object.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\opcodes.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\profiler.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\rand.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\reflection.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\remoting.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\runtime.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\security-core-clr.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\security-manager.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\mono-security.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\seq-points-data.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\sgen-mono.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\threadpool-io.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\threadpool.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\threadpool-worker-default.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\sgen-bridge.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\sgen-new-bridge.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\sgen-old-bridge.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\sgen-tarjan-bridge.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\sgen-toggleref.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\sgen-stw.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\w32socket.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\sre.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\sre-encode.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\sre-save.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\string-icalls.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\sysmath.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\threads.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\verify.c" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\appdomain.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\appdomain-icalls.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\assembly.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\attach.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\cil-coff.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\class-internals.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\class.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\cominterop-win32-internals.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\cominterop.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\console-io.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\console-win32-internals.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\coree-internals.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\coree.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\culture-info-tables.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\culture-info.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\custom-attrs-internals.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\debug-helpers.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\debug-mono-ppdb.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\debug-mono-symfile.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\domain-internals.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\dynamic-image-internals.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\dynamic-stream-internals.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\environment.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\exception.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\w32file-internals.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\w32file-win32-internals.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\w32file.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\w32error.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\utils\w32api.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\filewatcher.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\gc-internals.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\handle.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\icall-windows-internals.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\icall-internals.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\marshal-internals.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\marshal-windows-internals.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\mono-security-windows-internals.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\number-ms.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\property-bag.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\w32process.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\w32process-internals.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\w32process-win32-internals.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\remoting.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\seq-points-data.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\sgen-bridge-internals.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\sgen-client-mono.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\w32socket-internals.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\threadpool-io.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\threadpool.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\threadpool-worker.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\icall-def.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\image.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\loader.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\locales.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\lock-tracer.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\marshal.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\mempool-internals.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\mempool.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\metadata-internals.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\metadata.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\method-builder.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\monitor.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\mono-basic-block.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\mono-config.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\mono-config-dirs.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\mono-debug-debugger.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\mono-debug.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\mono-endian.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\mono-hash.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\mono-conc-hash.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\mono-mlist.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\mono-perfcounters-def.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\mono-perfcounters.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\mono-ptr-array.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\normalization-tables.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\number-formatter.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\object-internals.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\object.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\opcodes.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\profiler-events.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\profiler-private.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\profiler.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\rand.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\reflection.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\reflection-cache.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\reflection-internals.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\runtime.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\security-core-clr.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\security-manager.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\security.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\sgen-bridge.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\sgen-toggleref.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\w32socket.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\sre-internals.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\string-icalls.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\sysmath.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\tabledefs.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\threads-types.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\verify-internals.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\verify.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\metadata\wrapper-types.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="$(MonoSourceLocation)\mono\metadata\Makefile.am" />
-  </ItemGroup>
+  <Import Project="libmonoruntime-common.targets" />
+  <Import Project="libmonoruntime-win32.targets" />
+  <Import Project="libmonoruntime-posix.targets" />
 </Project>
