--- a/msvc/eglib-posix.targets.filters
+++ b/msvc/eglib-posix.targets.filters
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <ItemGroup>
+  <ItemGroup Label="posix_sources">
     <ClCompile Include="$(MonoSourceLocation)\mono\eglib\gfile-posix.c">
       <Filter>Source Files$(EGLibFilterSubFolder)\posix</Filter>
     </ClCompile>
