--- a/msvc/eglib-win32.targets
+++ b/msvc/eglib-win32.targets
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <ItemGroup>
+  <ItemGroup Label="win32_sources">
     <ClCompile Include="$(MonoSourceLocation)\mono\eglib\gdate-win32.c" />
     <ClCompile Include="$(MonoSourceLocation)\mono\eglib\gdir-win32.c" />
     <ClCompile Include="$(MonoSourceLocation)\mono\eglib\gfile-win32.c" />
@@ -10,7 +10,7 @@
     <ClCompile Include="$(MonoSourceLocation)\mono\eglib\gtimer-win32.c" />
     <ClCompile Include="$(MonoSourceLocation)\mono\eglib\gunicode-win32.c" />
    </ItemGroup>
-   <ItemGroup>
+  <ItemGroup Label="win32_headers">
     <ClInclude Include="$(MonoSourceLocation)\mono\eglib\gmodule-win32-internals.h" />
   </ItemGroup>
 </Project>
