--- a/msvc/libmonoutils-arch.targets.filters
+++ b/msvc/libmonoutils-arch.targets.filters
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <ItemGroup>
+  <ItemGroup Label="arch_sources">
     <ClCompile Include="$(MonoSourceLocation)\mono\utils\mach-support-x86.c">
       <Filter>Source Files$(MonoUtilsFilterSubFolder)\arch</Filter>
     </ClCompile>
