--- a/msvc/libmini.targets
+++ b/msvc/libmini.targets
@@ -1,137 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-<ItemGroup>
-    <ClCompile Include="$(MonoSourceLocation)\mono\mini\alias-analysis.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\mini\arch-stubs.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\mini\exceptions-amd64.c">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
-    </ClCompile>
-    <ClCompile Include="$(MonoSourceLocation)\mono\mini\exceptions-x86.c">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
-    </ClCompile>
-    <ClCompile Include="$(MonoSourceLocation)\mono\mini\mini-amd64.c">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
-    </ClCompile>
-    <ClCompile Include="$(MonoSourceLocation)\mono\mini\mini-amd64-gsharedvt.c">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
-    </ClCompile>
-    <ClCompile Include="$(MonoSourceLocation)\mono\mini\mini-runtime.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\mini\mini-windows.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\mini\mini-x86.c">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
-    </ClCompile>
-    <ClCompile Include="$(MonoSourceLocation)\mono\mini\mini-x86-gsharedvt.c">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
-    </ClCompile>
-    <ClCompile Include="$(MonoSourceLocation)\mono\mini\mini.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\mini\memory-access.c" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\mini\ir-emit.h" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\mini\method-to-ir.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\mini\decompose.c" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\mini\mini-amd64.h">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
-    </ClInclude>
-    <ClInclude Include="$(MonoSourceLocation)\mono\mini\mini-amd64-gsharedvt.h">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
-    </ClInclude>
-    <ClInclude Include="$(MonoSourceLocation)\mono\mini\mini-windows.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\mini\mini-x86.h">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
-    </ClInclude>
-    <ClInclude Include="$(MonoSourceLocation)\mono\mini\mini.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\mini\seq-points.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\mini\version.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\mini\optflags-def.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\mini\cfgdump.h" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\mini\cfgdump.c" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\mini\jit-icalls.h " />
-    <ClCompile Include="$(MonoSourceLocation)\mono\mini\jit-icalls.c " />
-    <ClCompile Include="$(MonoSourceLocation)\mono\mini\seq-points.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\mini\trace.c" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\mini\trace.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\mini\patch-info.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\mini\mini-ops.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\mini\mini-arch.h" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\mini\dominators.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\mini\cfold.c" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\mini\regalloc.h" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\mini\helpers.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\mini\liveness.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\mini\ssa.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\mini\abcremoval.c" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\mini\abcremoval.h" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\mini\local-propagation.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\mini\driver.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\mini\debug-mini.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\mini\linear-scan.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\mini\aot-compiler.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\mini\aot-runtime.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\mini\graph.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\mini\mini-codegen.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\mini\mini-cross-helpers.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\mini\mini-exceptions.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\mini\mini-trampolines.c  " />
-    <ClCompile Include="$(MonoSourceLocation)\mono\mini\tramp-amd64.c">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
-    </ClCompile>
-    <ClCompile Include="$(MonoSourceLocation)\mono\mini\tramp-amd64-gsharedvt.c">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
-    </ClCompile>
-    <ClCompile Include="$(MonoSourceLocation)\mono\mini\tramp-x86.c">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
-    </ClCompile>
-    <ClCompile Include="$(MonoSourceLocation)\mono\mini\tramp-x86-gsharedvt.c">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
-    </ClCompile>
-    <ClCompile Include="$(MonoSourceLocation)\mono\mini\branch-opts.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\mini\mini-generic-sharing.c" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\mini\simd-methods.h" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\mini\tasklets.c" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\mini\tasklets.h" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\mini\simd-intrinsics.c" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\mini\mini-unwind.h" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\mini\unwind.c" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\mini\image-writer.h" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\mini\image-writer.c" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\mini\dwarfwriter.h" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\mini\dwarfwriter.c" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\mini\mini-gc.h" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\mini\mini-gc.c" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\mini\debugger-agent.h " />
-    <ClCompile Include="$(MonoSourceLocation)\mono\mini\debugger-agent.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\mini\xdebug.c" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\mini\mini-llvm.h" />
-    <ClInclude Include="$(MonoSourceLocation)\mono\mini\mini-llvm-cpp.h" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\mini\mini-native-types.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\mini\type-checking.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\mini\lldb.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\mini\interp\interp-stubs.c" />
-    <ClCompile Include="$(MonoSourceLocation)\mono\mini\mini-profiler.c" />
-  </ItemGroup>
-  <ItemGroup>
-    <CustomBuildStep Include="$(MonoSourceLocation)\mono\mini\mini-x86.h">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
-    </CustomBuildStep>
-    <CustomBuildStep Include="$(MonoSourceLocation)\mono\mini\mini-amd64.h">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
-    </CustomBuildStep>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="$(MonoSourceLocation)\mono\mini\Makefile.am.in" />
-  </ItemGroup>
+  <Import Project="libmini-common.targets" />
+  <Import Project="libmini-win32.targets" />
+  <Import Project="libmini-posix.targets" />
+  <Import Project="libmini-arch.targets" />
+  <Import Project="libmini-interp.targets" />
+  <Import Project="libmini-llvm.targets" />
 </Project>
