--- a/msvc/eglib-posix.targets.filters
+++ b/msvc/eglib-posix.targets.filters
@@ -1,7 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="posix_sources">
-    <ClCompile Include="$(MonoSourceLocation)\mono\eglib\gfile-posix.c">
+    <ClCompile Include="$(MonoSourceLocation)\mono\eglib\gdate-unix.c">
+      <Filter>Source Files$(EGLibFilterSubFolder)\posix</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MonoSourceLocation)\mono\eglib\gdir-unix.c">
+      <Filter>Source Files$(EGLibFilterSubFolder)\posix</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MonoSourceLocation)\mono\eglib\gfile-unix.c">
+      <Filter>Source Files$(EGLibFilterSubFolder)\posix</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MonoSourceLocation)\mono\eglib\gmisc-unix.c">
+      <Filter>Source Files$(EGLibFilterSubFolder)\posix</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MonoSourceLocation)\mono\eglib\gmodule-unix.c">
+      <Filter>Source Files$(EGLibFilterSubFolder)\posix</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MonoSourceLocation)\mono\eglib\gtimer-unix.c">
       <Filter>Source Files$(EGLibFilterSubFolder)\posix</Filter>
     </ClCompile>
   </ItemGroup>
